# NE591

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  README.md
src/inlab01/: CMakeLists.txt  main.cxx
src/inlab02/: CMakeLists.txt  README.md  main.cxx  user_func.h
src/inlab03/: CMakeLists.txt  README.md  main.cxx
src/inlab04/: CMakeLists.txt  main.cxx
src/inlab05/: CMakeLists.txt  main.cxx
src/inlab05/examples/: test1.txt
src/inlab06/: CMakeLists.txt  main.cxx
src/inlab06/examples/: gs.inp  pj.inp  test2.inp
src/lab06/: CMakeLists.txt  compare_methods.cxx  generate_matrix.cxx  generate_matrix.h  lab06.h  main.cxx
src/lab06/.virtual_documents/analysis/: analysis.ipynb
src/lab06/analysis/: analysis.ipynb  timing_info.json
src/lab06/examples/: gs.inp  lup.inp  sor.inp
src/lab07/: CMakeLists.txt
src/lab07/src/: main.cpp
src/lab08/: CMakeLists.txt  README.md  compile_lab08.sh  submit_outlab08.sh
src/lab08/examples/: a32s10.inp  a64s20k.inp  test.inp
src/lab08/include/: flux.h  grid.h  io.h  lab08.h  mpi_utils.h  utils.h
src/lab08/src/: inlab08.cpp  mpi_utils.cpp  outlab08.cpp
src/lab09/: CMakeLists.txt
src/lab09/analysis/: analysis.ipynb  timing_custom.json  timing_random.json
src/lab09/include/: Lab10.h  build_system.h  custom_system.h  inputs.h  util.h
src/lab09/src/: inlab09.cpp  outlab09.cpp  test.cpp  timing.cpp
src/methods/: array.h  integrate.h  interpolate.h  legendre.h  matrix.h  optimize.h  roots.h
src/methods/integrate/: gauss.h  integrate.h  simpson.h
src/methods/linalg/: lu.h  matrix.h
src/methods/matrix/: matrix.hxx
src/methods/utils/: io.h
src/outlab01/: CMakeLists.txt  README.md  main.cxx
src/outlab02/: CMakeLists.txt  README.md  main.cxx  user_func.h
src/outlab02/analysis/: report.ipynb
src/outlab02/analysis/data/n3/: input  input.csv  output.csv
src/outlab02/analysis/data/n4/: input.csv
src/outlab02/analysis/data/n8/: input.csv
src/outlab03/: CMakeLists.txt  main.cxx  user_func.h
src/outlab03/analysis/data/: part_5.csv
src/outlab04/: CMakeLists.txt  main.cxx
src/outlab05/: CMakeLists.txt  main.cxx
src/outlab05/examples/: test1.txt
src/outlab12/: CMakeLists.txt
src/outlab12/src/: outlab12.cpp
src/project01/: Analysis.ipynb  CMakeLists.txt  main.cxx
src/project01/.virtual_documents/: Analysis.ipynb
src/project01/examples/: data.csv  l64.json  p16.json  p16_result.json  p4.json  p4_result.json  p64.json  test1.txt  test2.txt
src/project02/: CMakeLists.txt  README.md  project02.cpp  project02.h
src/project02/examples/: p64_lup.json  p8_lup.json  p8_sor.json  s5_gs.inp  s5_sor.out
src/project04/: CMakeLists.txt  compile_project04.sh  submit_project04.sh
src/project04/examples/: s8_pj.inp
src/project04/include/: Lab10.h  inputs.h  parallel_fd.h
src/project04/src/: mpi_utils.cpp  project.cpp
submissions/shumilov_inlab05/: CMakeLists.txt  README.md
submissions/shumilov_inlab05/include/linalg/: lu.h  matrix.h  utils.h
submissions/shumilov_inlab05/include/utils/: math.h
submissions/shumilov_inlab07/: CMakeLists.txt  README.md  compile_inlab07.sh  submit_inlab07.sh
submissions/shumilov_inlab07/examples/: output.0  output.1  output.2  output.3
submissions/shumilov_inlab11/: CMakeLists.txt  README.md
submissions/shumilov_inlab11/examples/: symm.inp  symm2.inp
submissions/shumilov_inlab11/include/lab/: config.h  io.h
submissions/shumilov_inlab11/include/methods/fixed_point/: state.h  (+1 more)
submissions/shumilov_inlab11/include/utils/: io.h
submissions/shumilov_inlab11/lab_include/: build_system.h  lab11.h
submissions/shumilov_inlab11/src/: inlab11.cpp
submissions/shumilov_outlab02/: CMakeLists.txt  README.md
submissions/shumilov_outlab02/analysis/: report.ipynb
submissions/shumilov_outlab02/include/: array.h
submissions/shumilov_outlab02/src/: main.cxx
submissions/shumilov_outlab04/: CMakeLists.txt  README.md
submissions/shumilov_outlab04/examples/: inp  test2.inp
submissions/shumilov_outlab04/include/linalg/: lu.h  matrix.h
submissions/shumilov_outlab04/src/: main.cxx
submissions/shumilov_outlab06/: CMakeLists.txt  README.md
submissions/shumilov_outlab06/analysis/: analysis.ipynb
submissions/shumilov_outlab06/examples/: gs.out  n5.out  pj.out  sor.out
submissions/shumilov_outlab06/include/: custom_system.h
submissions/shumilov_outlab06/include/methods/: array.h  optimize.h
submissions/shumilov_outlab06/src/: compare_methods.cxx  custom_system.cxx
submissions/shumilov_outlab08/: CMakeLists.txt  README.md  compile_oulab08.sh
submissions/shumilov_outlab08/examples/: a128s1024.inp  a256s4096.inp  a512s8192.inp
submissions/shumilov_outlab08/include/methods/: array.h  legendre.h  optimize.h
submissions/shumilov_outlab08/lab_include/: grid.h  inlab08.h  lab08.h  mpi_utils.h  outlab08.h  slab.h  utils.h
submissions/shumilov_outlab08/src/: gauss_quad.cpp  inlab08.cpp
submissions/shumilov_outlab11/: CMakeLists.txt  README.md
submissions/shumilov_outlab11/examples/: asymm.inp  symm.inp  symm2.inp
submissions/shumilov_outlab11/include/lab/: lab.h
submissions/shumilov_outlab11/include/methods/: array.h
submissions/shumilov_outlab11/include/utils/: io.h
submissions/shumilov_outlab11/lab_include/: lab11.h
submissions/shumilov_outlab11/src/: outlab11.cpp
submissions/shumilov_project04/: CMakeLists.txt  README.md  submit_project04.n4.sh  submit_project04.sh
submissions/shumilov_project04/analysis/: analysis.ipynb
submissions/shumilov_project04/analysis/tests/: c128_lup.inp  c128_pj.inp  c256_lup.inp  c256_pj.inp  c512_lup.inp  c512_pj.inp  c64_lup.inp  c64_pj.inp  g128_lup.inp  g128_pj.inp  g16_lup.inp  g256_lup.inp  g256_pj.inp  g32_lup.inp  g32_pj.inp  g512_pj.inp
submissions/shumilov_project04/analysis/utils/: __init__.py  system.py
submissions/shumilov_project04/examples/: Flux  s12_pj.inp  s12_pj.out
submissions/shumilov_project04/include/methods/: finite_difference.h  optimize.h  special.h
submissions/shumilov_project04/lab_include/: mpi_utils.h  parallel_fd.h  topology.h
(+1560 files in other folders)
