#add_subdirectory(inlab01)
add_subdirectory(outlab01)

add_subdirectory(inlab02)
add_subdirectory(outlab02)

add_subdirectory(inlab03)
add_subdirectory(outlab03)

add_subdirectory(inlab04)
add_subdirectory(outlab04)

add_subdirectory(inlab05)
add_subdirectory(outlab05)

add_subdirectory(inlab06)

add_subdirectory(project01)